# c12880-spectrometer

./: .gitignore  README.md
firmware/: CMakeLists.txt  README.md  firmware.ioc  firmware.txt  mx.scratch
firmware/App/: CMakeLists.txt  firmware.c  firmware.h  protocol.c  protocol.h  sensor.c  sensor.h
firmware/Drivers/STM32L4xx_HAL_Driver/Src/: CMakeLists.txt
firmware/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
firmware/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: CMakeLists.txt
firmware/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: CMakeLists.txt
firmware/Src/: CMakeLists.txt  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
hardware/: 74hct125.lib  ads1115.lib  ads1115_board.lib  board-cache.lib  board-led.kicad_pcb  board-mcu.kicad_pcb  board-sensor.kicad_pcb  board.kicad_pcb  board.net  board.pro  board.sch  board.xml  c12880ma.lib  fp-lib-table
hardware/ads1115_board.pretty/: SIP-10.kicad_mod
hardware/c12880ma_socket.pretty/: DIP-14_0.kicad_mod
hardware/gw-jclps2.pretty/: GW-JCLPS2.CM.kicad_mod
hardware/led-ocu-400.pretty/: LED-OCU-400.kicad_mod
hardware/model/shapes3D/: c12880ma_sensor.wrl
hardware/sc72.pretty/: SIP-3.kicad_mod
hardware/sfh4776.pretty/: SFH4776_footprint.kicad_mod
hardware/via.pretty/: Via.kicad_mod
hardware/vssop10.pretty/: VSSOP-10_3x3mm_Pitch0.5mm.kicad_mod  VSSOP10.kicad_mod
hardware/we-744766920.pretty/: WE-744766920.kicad_mod
