add_library(HAL 
    stm32l4xx_hal.c
    stm32l4xx_hal_cortex.c
    stm32l4xx_hal_rcc.c
    stm32l4xx_hal_rcc_ex.c
    stm32l4xx_hal_i2c.c
    stm32l4xx_hal_i2c_ex.c
    stm32l4xx_hal_pcd.c
    stm32l4xx_hal_pcd_ex.c
    stm32l4xx_hal_tim.c
    stm32l4xx_hal_tim_ex.c
    stm32l4xx_hal_dma.c
    stm32l4xx_hal_dma_ex.c
    stm32l4xx_hal_gpio.c
    stm32l4xx_hal_pwr.c
    stm32l4xx_hal_pwr_ex.c
    stm32l4xx_hal_flash.c
    stm32l4xx_hal_flash_ex.c
    stm32l4xx_hal_flash_ramfunc.c
    stm32l4xx_ll_usb.c
)